--- a/QueixaAki.App/QueixaAki.Android/QueixaAki.Android.csproj
+++ b/QueixaAki.App/QueixaAki.Android/QueixaAki.Android.csproj
@@ -165,4 +165,9 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties TriggeredFromHotReload="False" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
