--- a/QueixaAki.App/QueixaAki.Android/Properties/AndroidManifest.xml
+++ b/QueixaAki.App/QueixaAki.Android/Properties/AndroidManifest.xml
@@ -6,9 +6,14 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="Queixa Aki" android:theme="@style/MainTheme">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="br.com.queixaaki.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyC0U0pKKUmgNplK7YusxHLCYixBUB84WJ0" />
 	</application>
 </manifest>
