--- a/QueixaAki.App/QueixaAki.iOS/Info.plist
+++ b/QueixaAki.App/QueixaAki.iOS/Info.plist
@@ -44,6 +44,8 @@
     <string>This app needs access to microphone.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>This app needs access to the photo gallery.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Fill in a reason why your app needs access to location.</string>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Fill in a reason why your app needs access to location.</string>
   </dict>
