--- a/QueixaAki.App/QueixaAki.iOS/QueixaAki.iOS.csproj
+++ b/QueixaAki.App/QueixaAki.iOS/QueixaAki.iOS.csproj
@@ -64,6 +64,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomRenderers\BaseEntryRenderer.cs" />
+    <Compile Include="Implementation\SpecificPlatform.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
@@ -124,6 +125,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.Permissions">
       <Version>6.0.1</Version>
     </PackageReference>
@@ -137,7 +141,7 @@
       <Version>5.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1821" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-rc1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.GoogleMaps">
       <Version>3.3.0</Version>
     </PackageReference>
@@ -224,4 +228,5 @@
   <ItemGroup>
     <BundleResource Include="Resources\download%403x.png" />
   </ItemGroup>
+  <ItemGroup />
 </Project>
